fix blurred edges with slide zero

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -428,7 +428,7 @@ body,
                         color: @lightest-color;
                         background-color: @accent-secondary;
                         border-color: @accent-secondary;
-                        box-shadow: 0 0 40px 40px @accent-secondary;
+                        box-shadow: 0 0 0 40px @accent-secondary;
                         overflow: hidden;
 
                         .slide-contents {
